# LoreCrafter

./: .TODO  .dockerignore  .editorconfig  .env.example  .gitignore  Developer-Guide.md  Dockerfile  Makefile  README.md  character_generator.py  developer-guide.md  docker-compose.yml  fly.toml  go.mod  go.sum  main.go  main.py  main_http.py  pyproject.toml  sqlc.yaml  swagger.yml  yoyo.ini
.github/workflows/: deploy.yml  fly-deploy.yml  test.yml
.windsurf/rules/: code-enforcer.md  new-feature.md
app/api/: server.go
chroma_db/: chroma.sqlite3
cmd/api/: docs.go  exceptions.go  http_server.go  server.go
docs/: TUTOR.md  tasks.md
frontend/: .editorconfig  .gitignore  README.md  middleware.ts  package-lock.json  package.json  routes.ts
frontend/actions/: userAction.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: Button.tsx  Footer.tsx  Input.tsx  Navbar.tsx  Select.tsx  TextArea.tsx  ThemeToggle.tsx
frontend/context/: auth.tsx
frontend/docs/: api_documentation.md  backend.md  cookie-based-auth.md  frontend_developer_prompt.md
frontend/lib/: apiClient.ts  types.ts  verifyToken.ts
internal/config/: config.go
internal/domain/: auth.go  campaign.go  user.go
internal/interfaces/: repository.go  security.go
internal/usecases/: ai_campaign_usecase.go  auth_usecase.go  campaign_usecase.go
internal/utils/: converters.go  error_helper.go
prompts/: character_template.txt
src/campaign/: __init__.py  campaign_generator.py  prompts.py
src/character/: __init__.py  builder.py  character_generator.py  llm.py  (+4 more)
tests/: README.md  conftest.py
(+138 files in other folders)
