[project]
name = "lorecrafter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-openai>=0.3.14",
    "openai>=1.75.0",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "typer>=0.15.2",
]
