[project]
name = "lorecrafter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.23",
    "langchain-chroma>=0.1.2",
    "langchain-cli>=0.0.36",
    "langchain-community>=0.3.21",
    "langchain-google-genai>=2.1.3",
    "langchain-openai>=0.3.14",
    "markdown>=3.5.1",
    "openai>=1.75.0",
    "peewee>=3.17.9",
    "psycopg2>=2.9.10",
    "pyargon2>=1.1.0",
    "pydantic>=2.11.3",
    "pyseto>=1.8.3",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "typer>=0.15.2",
    "weasyprint>=65.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.24.1",
    "pytest-mock>=3.11.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
